progressive web app config
- enable service worker
- remove cordova dependency
- remove splashscreen and statusbar plugin
- set app manifest
- create favicon and logo
- implement spinner as loading indicator in index file

--- a/eGK/src/manifest.json
+++ b/eGK/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Ionic",
-  "short_name": "Ionic",
+  "name": "Gesundheitskarte",
+  "short_name": "eGK",
   "start_url": "index.html",
   "display": "standalone",
   "icons": [{
