--- a/eGK/src/manifest.json
+++ b/eGK/src/manifest.json
@@ -8,6 +8,6 @@
     "sizes": "512x512",
     "type": "image/png"
   }],
-  "background_color": "#4e8ef7",
-  "theme_color": "#4e8ef7"
+  "background_color": "#5682a3",
+  "theme_color": "#009688"
 }
