--- a/eGK/package.json
+++ b/eGK/package.json
@@ -24,10 +24,12 @@
     "@ionic-native/splash-screen": "~4.12.0",
     "@ionic-native/status-bar": "~4.12.0",
     "@ionic/storage": "2.1.3",
+    "base64-arraybuffer": "^0.1.5",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "text-encoding-utf-8": "^1.0.2",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
